<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    tools:context=".MainActivity"
    android:background="#4fd375"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/quiz"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/quiz"
            android:text="@string/cero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/expo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/expo"
            android:text="@string/cero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/plab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/lab"
            android:text="@string/cero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/pfinal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pfin"
            android:text="@string/cero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/nota"
        android:text="@string/result"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:paddingLeft="35dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/bcalcular"/>

</LinearLayout>

